Bug 321448 - Resign button does not work
Summary: Resign button does not work
Status: RESOLVED FIXED
Alias: None
Product: knights
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.5.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-21 00:18 UTC by Geoffrey van Wyk
Modified: 2017-10-03 11:31 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Geoffrey van Wyk 2013-06-21 00:18:55 UTC
When one clicks on the Resign button on the toolbar, the game does not end. One's clock keeps going, and when one makes a move, the opponent still responds.

This happens whether one plays against an engine or on Free Chess Server.

Reproducible: Always

Steps to Reproduce:
1. Start Knights.
2. On the New Game dialog, select to play against either an engine or on Free Chess Server.
3. Select a color or let it be chosen randomly.
4. Select a time control.
5. Click OK to start the game against the engine, or to accept or make a challenge on Free Chess Server, and then start a game.
6. Play some moves.
7. Click the Resign button on the toolbar.
Actual Results:  
Nothing happens. The clocks keep going and the opponent keeps responding to one's moves.

Expected Results:  
The clocks should stop, the game should end, and the Game Over dialog should appear.
Comment 1 Yngve Levinsen 2013-12-01 17:08:20 UTC
Can confirm the same problem, using the following version:
$ LC_ALL=C knights --version
Qt: 4.8.5
KDE Development Platform: 4.11.3
Knights: 2.5.0

I am using Chakra GNU/Linux.
Comment 2 Alexander Semke 2017-10-03 11:31:28 UTC
Git commit f9fff930aa9174d3c90771e06bb913818b27849e by Alexander Semke.
Committed on 03/10/2017 at 11:29.
Pushed by asemke into branch 'master'.

Implemented resigning of a game.
FIXED-IN: 2.6

M  +5    -2    src/gamemanager.cpp
M  +1    -1    src/gamemanager.h
M  +7    -1    src/knights.cpp
M  +1    -0    src/knights.h

https://commits.kde.org/knights/f9fff930aa9174d3c90771e06bb913818b27849e