Implemented resigning of a game.

BUG: 321448
FIXED-IN: 2.6